<resources>
    <string name="app_name">Practica8_Digimind</string>
    <string name="title_activity_bottom_nav_menu">BottomNavMenu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="what_do_you_want_to_remember_to_do">What do you want to remember to do</string>
    <string name="take_my_pill">Take my pill</string>
    <string name="when_do_you_want_to_do_it">When do you want to do it</string>
    <string name="monday">Monday</string>
    <string name="logo">Logo</string>
    <string name="set_time">Set Time</string>
    <string name="at_what_time">At what time</string>
    <string name="my_board">My board</string>
    <string name="new_reminder">New Reminder</string>
    <string name="logo_de_la_aplicaci_n">Logo de la aplicación</string>
    <string name="practice">Practice</string>
    <string name="_17_00">17.00</string>
</resources>